# mundial_2026

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: actualizar-mundial.yml
.streamlit/: config.toml
data/: claude_16avos.csv  claude_cuartos.csv  claude_octavos.csv  claude_scores.csv  claude_semis.csv  resultados_provisionales.csv  valor_plantel_2026.csv
data/processed/: backtesting.parquet  dc_params.json  elo_calibracion.parquet  elo_ratings.parquet  fixtures_2026.parquet  grupos_2026.parquet  partidos.parquet  shootouts.parquet  simulacion_2026.parquet
scripts/: 01_descargar_datos.py  02_explorar_fixtures_2026.py  03_modelo_elo.py  04_modelo_poisson.py  05_backtesting.py  06_simulacion.py  _balance_acierto.py  _bootstrap.py  _experimento_modelos_goles.py  _experimento_valor_plantel.py  _gen_claude_scores.py  _proto_sugerencia.py
src/mundial/: __init__.py  apuestas.py  datos.py  dixon_coles.py  elo.py  forma.py  geo.py  horarios.py  torneo.py
